--- a/emswebapp/src/main/resources/application.properties
+++ b/emswebapp/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+#Database Configuration
+spring.datasource.url = jdbc:mysql://localhost:3306/cosmostaker?useSSL=false&serverTimezone=UTC
+spring.datasource.username = root
+spring.datasource.password = admin
 
+#Hibernate
+#The SQL Dialect makes hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+#Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
+
+#Remove these loggings later
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
