--- a/emswebapp/src/main/resources/application.properties
+++ b/emswebapp/src/main/resources/application.properties
@@ -11,5 +11,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 spring.jpa.hibernate.ddl-auto = update
 
 #Remove these loggings later
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type=TRACE
+# logging.level.org.hibernate.SQL=DEBUG
+# logging.level.org.hibernate.type=TRACE
