--- a/emswebapp/src/main/resources/application.properties
+++ b/emswebapp/src/main/resources/application.properties
@@ -10,6 +10,11 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 #Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
 
+#Security configuration
+# spring.security.user.name = admin
+# spring.security.user.password = admin
+# spring.security.user.roles = ADMIN
+
 #Remove these loggings later
 # logging.level.org.hibernate.SQL=DEBUG
 # logging.level.org.hibernate.type=TRACE
