--- a/emswebapp/src/main/resources/application.properties
+++ b/emswebapp/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.url = jdbc:mysql://localhost:3306/cosmostaker?useSSL=false&ser
 spring.datasource.username = root
 spring.datasource.password = admin
 
+
 #Hibernate
 #The SQL Dialect makes hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
@@ -10,10 +11,10 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 #Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
 
-#Security configuration
-# spring.security.user.name = admin
-# spring.security.user.password = admin
-# spring.security.user.roles = ADMIN
+
+#Error handling
+server.error.whitelabel.enabled=false
+server.error.path=/error
 
 #Remove these loggings later
 # logging.level.org.hibernate.SQL=DEBUG
