--- a/emswebapp/src/main/resources/application.properties
+++ b/emswebapp/src/main/resources/application.properties
@@ -16,6 +16,7 @@ spring.jpa.hibernate.ddl-auto = update
 server.error.whitelabel.enabled=false
 server.error.path=/error
 
-#Remove these loggings later
+
+# Loggings
 # logging.level.org.hibernate.SQL=DEBUG
 # logging.level.org.hibernate.type=TRACE
