--- a/emswebapp/pom.xml
+++ b/emswebapp/pom.xml
@@ -13,13 +13,22 @@
 	<groupId>com.cosmostaker</groupId>
 	<artifactId>emswebapp</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>emswebapp</name>
 	<description>Employee Management System</description>
+
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 	</properties>
 	
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
@@ -55,7 +64,8 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>8.0.32</version>
+			<!-- <version>8.0.32</version> -->
+			<!-- aws using <version>8.0.28</version> -->
 			<scope>runtime</scope>
 		</dependency>
 
@@ -67,6 +77,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>ems-web-app</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
