--- a/emswebapp/src/main/resources/application.properties
+++ b/emswebapp/src/main/resources/application.properties
@@ -1,22 +1,50 @@
-#Database Configuration
-spring.datasource.url = jdbc:mysql://localhost:3306/cosmostaker?useSSL=false&serverTimezone=UTC
-spring.datasource.username = root
-spring.datasource.password = admin
+##############################
+##    Local Configuration   ##
+##############################
 
+# #Database Configuration
+# spring.datasource.url = jdbc:mysql://localhost:3306/cosmostaker?useSSL=false&serverTimezone=UTC
+# spring.datasource.username = root
+# spring.datasource.password = admin
 
-#Hibernate
-#The SQL Dialect makes hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+# #Hibernate
+# #The SQL Dialect makes hibernate generate better SQL for the chosen database
+# spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
-#Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = update
-
+# #Hibernate ddl auto (create, create-drop, validate, update)
+# spring.jpa.hibernate.ddl-auto = update
 
 #Error handling
+# server.error.whitelabel.enabled=false
+# server.error.path=/error
+
+# Loggings
+# logging.level.org.hibernate.SQL=DEBUG
+# logging.level.org.hibernate.type=TRACE
+
+
+
+
+##############################
+##     AWS Configuration    ##
+##############################
+
+spring.datasource.url=jdbc:mysql://cosmostaker.cshakba81es5.ap-northeast-1.rds.amazonaws.com:3306/cosmostaker
+spring.datasource.username=root
+spring.datasource.password=cosmostaker#123
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+server.port=5000
+spring.jpa.properties.max_allowed_packet=2000
+
+
+#Error handling - Page 404, 500
 server.error.whitelabel.enabled=false
 server.error.path=/error
 
 
 # Loggings
-# logging.level.org.hibernate.SQL=DEBUG
-# logging.level.org.hibernate.type=TRACE
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
+
